Scrollbar to video list, thumbnails, video playing correctly

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -2,13 +2,15 @@
 
 $bg-grey: #f1f1f1;
 $bg-grey-hover: lighten($bg-grey, 3%);
-
 $light-grey: #e1e1e1;
 $light-grey-hover: lighten($light-grey, 3%);
-$white: #fff;
+$mid-grey: #b5b5b5;
+$second-grey: #444;
 $almost-black: #232323;
-$blue-black: rgb(27, 26, 37);
+$white: #fff;
 
+$vim-blue: rgb(29, 173, 239);
+$blue-black: rgb(27, 26, 37);
 $fuschia: #ff0080;
 
 html {
@@ -20,18 +22,20 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
-  font-family: Montserrat;
+  font-family: 'Montserrat', sans-serif;
 
   h1 {
+    font-family: 'Playfair Display';
     text-align: center;
-    font-size: 48px;
+    font-size: 88px;
     color: $blue-black;
+    margin-bottom: 30px;
   }
 }
 
 header {
   position: fixed;
-  height: 47px;
+  height: 37px;
   padding: 10px 20px;
   left: 0;
   top: 0;
@@ -45,10 +49,10 @@ header {
 .container {
   width: 1200px;
   margin: 0 auto;
-  margin-top: 87px;
+  margin-top: 70px;
 
   .banner-image {
-    background-image: url('/assets/staffpicks.png');
+    background-image: url('../assets/staffpicks.png');
     background-repeat: no-repeat;
     background-position: center;     
     background-size: 490px 121px;
@@ -60,13 +64,23 @@ header {
 }
 
 #content {
+
+  .ps-container > .ps-scrollbar-y-rail > .ps-scrollbar-y {
+    background-color: $vim-blue !important;
+    border-radius: 0 !important;
+    opacity: 1 !important;
+  }
+
   #video-list {
     width: 40%;
     height: 480px;
-    padding: 0 0 20px;
+    padding: 0;
     overflow: scroll;
     float: left;
-    background: $light-grey;
+    background: none;
+    z-index:10 !important;
+
+    position:relative;
 
     h2 {
       padding: 0 20px;
@@ -77,11 +91,34 @@ header {
     .video-list-object {
       padding: 20px;
       font-weight: 400;
-      font-family: 'Playfair Display';
-      border-bottom: 1px solid $white;
+      font-family: 'Lato';
+      border-bottom: 1px solid $bg-grey;
       transition: background-color .1s;
       background-color: $light-grey;
-      text-transform: capitalize;
+      height: 40px;
+
+      img {
+        float: left;
+        width: 53;
+      }
+
+      img,
+      span {
+        opacity: .25;
+        transition: opacity .1s;
+        height: 40px;
+        float: left;
+        display: inline;
+      }
+
+      span {
+        line-height: 40px;
+        padding-left: 10px;
+        text-overflow: ellipsis;
+        width: 320px;
+        white-space: nowrap;
+        overflow: hidden;
+      }
 
       // scss-lint:disable NestingDepth
       &:hover,
@@ -89,6 +126,12 @@ header {
         transition: background .1s;        
         background: $light-grey-hover;
         cursor: pointer;
+
+        img,
+        span {
+          opacity: 1;
+          transition: opacity .1s;
+        }
       }
     }
   }
@@ -101,6 +144,11 @@ header {
     padding: 20px;
     padding-top: 0;
 
+    h2 {
+      font-weight: 400;
+      color: $second-grey;
+    }
+
     .video-info {
       display: block;
       height: 20px;
@@ -108,7 +156,7 @@ header {
 
       // scss-lint:disable SelectorDepth
       .likes {
-        background-image: url('/assets/like.png');
+        background-image: url('../assets/like.png');
         background-repeat: no-repeat;
         background-size: 29px 20px;
         height: 20px;
@@ -121,7 +169,7 @@ header {
 
       // scss-lint:disable SelectorDepth
       .plays {
-        background-image: url('/assets/play.png');
+        background-image: url('../assets/play.png');
         background-repeat: no-repeat;
         background-size: 20px 20px;
         height: 20px;
@@ -148,10 +196,27 @@ header {
       font-size: 18px;
       height: 100px;
       overflow: hidden;
+      transition: height .5s;
       
       // scss-lint:disable NestingDepth
       &:after {
         content: '...';
+      }
+    }
+
+    .show-more {
+      height: 30px;
+      line-height: 30px;
+      text-align: center;
+      color: $mid-grey;
+      background-color: $light-grey;
+      transition: background-color, color .2s;
+
+      &:hover {
+        color: $almost-black;
+        background-color: $light-grey-hover;
+        transition: background-color, color .2s;
+        cursor: pointer;
       }
     }
   }
